--- a/src/site/templates/home.htm
+++ b/src/site/templates/home.htm
@@ -97,75 +97,7 @@
                 </div>
                 {{VIDEO}}
             </div>
-            <section class="page__projects projects">
-                <div class="projects__container">
-                    <div class="projects__header" data-animation>
-                        <h2 class="projects__title title-xxl">
-                            Наши проекты
-                        </h2>
-                        <div class="projects__controls">
-                            <button type="button" class="projects__controls-prev swiper-button-prev"></button>
-                            <button type="button" class="projects__controls-next swiper-button-next"></button>
-                        </div>
-                    </div>
-                    <div class="projects__slider swiper-container projects-slider" data-animation>
-
-                        <div class="swiper-wrapper projects-slider__wrapper">
-
-                            <a href="" class="swiper-slide projects-slider__item project">
-                                <span class="project__image">
-                                    <picture><source srcset="img/projects/01.webp"type="image/webp"><img src="img/projects/01.jpg" class="cover-image" alt="project image"></picture>
-                                </span>
-                                <span class="project__caption">
-                                    Укомплектован объект ВЛ 110 кВ «Снежная-КС-7»
-                                </span>
-                            </a>
-                            <a href="" class="swiper-slide projects-slider__item project">
-                                <span class="project__image">
-                                    <picture><source srcset="img/projects/02.webp"type="image/webp"><img src="img/projects/02.jpg" class="cover-image" alt="project image"></picture>
-                                </span>
-                                <span class="project__caption">
-                                    Реконструкция подстанции Портовая
-                                </span>
-                            </a>
-                            <a href="" class="swiper-slide projects-slider__item project">
-                                <span class="project__image">
-                                    <picture><source srcset="img/projects/03.webp"type="image/webp"><img src="img/projects/03.jpg" class="cover-image" alt="project image"></picture>
-                                </span>
-                                <span class="project__caption">
-                                    Кабельная линия 10кВ Крыловка РТП-109
-                                </span>
-                            </a>
-                            <a href="" class="swiper-slide projects-slider__item project">
-                                <span class="project__image">
-                                    <picture><source srcset="img/projects/01.webp"type="image/webp"><img src="img/projects/01.jpg" class="cover-image" alt="project image"></picture>
-                                </span>
-                                <span class="project__caption">
-                                    Укомплектован объект ВЛ 110 кВ «Снежная-КС-7»
-                                </span>
-                            </a>
-                            <a href="" class="swiper-slide projects-slider__item project">
-                                <span class="project__image">
-                                    <picture><source srcset="img/projects/02.webp"type="image/webp"><img src="img/projects/02.jpg" class="cover-image" alt="project image"></picture>
-                                </span>
-                                <span class="project__caption">
-                                    Реконструкция подстанции Портовая
-                                </span>
-                            </a>
-                            <a href="" class="swiper-slide projects-slider__item project">
-                                <span class="project__image">
-                                    <picture><source srcset="img/projects/03.webp"type="image/webp"><img src="img/projects/03.jpg" class="cover-image" alt="project image"></picture>
-                                </span>
-                                <span class="project__caption">
-                                    Кабельная линия 10кВ Крыловка РТП-109
-                                </span>
-                            </a>
-                        </div>
-
-                    </div>
-                </div>
-
-            </section>
+            {{PROJECTS}}
             <section class="page__news news">
                 <div class="news__container">
                     <div class="news__header" data-animation>
