--- a/src/site/templates/company/partial/bl-advantages-linked__item.htm
+++ b/src/site/templates/company/partial/bl-advantages-linked__item.htm
@@ -1,2 +1,9 @@
-<li><a href="{{LINK}}"><strong class="value js-num-animated">{{VALUE}}</strong> {{LABEL}}</a></li>
-                        
+<a href="{{LINK}}" class="about__numbers-item">
+                                <div class="about__numbers-value">
+                                    {{VALUE}}
+                                </div>
+                                <div class="about__numbers-text">
+                                    {{LABEL}}
+                                </div>
+                            </a>
+                            
