--- a/src/site/templates/company/partial/bl-advantages__item.htm
+++ b/src/site/templates/company/partial/bl-advantages__item.htm
@@ -1,2 +1,9 @@
-<li><strong class="value js-num-animated">{{VALUE}}</strong> {{LABEL}}</li>
-                        
+<div class="about__numbers-item">
+                                <div class="about__numbers-value">
+                                    {{VALUE}}
+                                </div>
+                                <div class="about__numbers-text">
+                                    {{LABEL}}
+                                </div>
+                            </div>
+                            
