--- a/src/site/templates/components/client/bl-clients.htm
+++ b/src/site/templates/components/client/bl-clients.htm
@@ -1,12 +1,24 @@
-<div id="bl-clients">
-            <div class="holder">
-                <h2><a href="/company/clients/">{{TITLE}}</a></h2>
-                <div class="tools-r">
-                    <a href="/company/clients/" class="more">смотреть всех</a>
-                </div>
-
-                <ul class="js-slider" data-arrows="false" data-adaptive="true" data-center="false">
-                    {{LIST}}
-                </ul>
-            </div> 
-        </div>
+<div class="companies__column companies-customers">
+                            <div class="companies__column-header">
+                                <h3 class="companies__title title-lg">
+                                    {{TITLE}}
+                                </h3>
+                                <a href="/company/clients/" class="companies__more more-link">Смотреть все</a>
+                            </div>
+                            <div class="companies__column-body">
+                                <div class="companies__item">
+                                    <picture><source srcset="/img/companies/customers/01.webp" type="image/webp"><img src="/img/companies/customers/01.png" alt="Роснефть"></picture>
+                                </div>
+                                <div class="companies__item">
+                                    <picture><source srcset="/img/companies/customers/02.webp" type="image/webp"><img src="/img/companies/customers/02.png" alt="Сетевая Компания"></picture>
+                                </div>
+                                <div class="companies__item">
+                                    <picture><source srcset="/img/companies/customers/03.webp" type="image/webp"><img src="/img/companies/customers/03.png" alt="Татнефть"></picture>
+                                </div>
+                            </div>
+                            <div class="companies__column-btn">
+                                <a href="/company/clients/" class="btn btn-blue">
+                                    Смотреть все
+                                </a>
+                            </div>
+                        </div>
