--- a/src/site/templates/components/staff/bl-staff.htm
+++ b/src/site/templates/components/staff/bl-staff.htm
@@ -1,9 +1,20 @@
-<div id="bl-team">
-            <div class="holder">
-                <h2><a href="/company/direction/">{{TITLE}}</a></h2>
-
-                <ul class="js-slider" data-mobile="true" data-adaptive="true">
-                    {{LIST}}
-                </ul>
-            </div>
-        </div>
+<section class="page__team team">
+                <div class="team__container">
+                    <div class="team__header" data-animation>
+                        <h2 class="team__title title-xxl">
+                            Главные лица
+                        </h2>
+                        <a href="company/direction/" class="team__more more-link">
+                            Смотреть все
+                        </a>
+                    </div>
+                    <div class="team__body" data-animation>
+                        {{LIST}}
+                    </div>
+                    <div class="team__btn">
+                        <a href="/company/direction/" class="btn btn-blue">
+                            Смотреть все
+                        </a>
+                    </div>
+                </div>
+            </section>
