--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -16,41 +16,7 @@
                 <li class="footer-body__list-item footer-body__list-caption">
                     О компании
                 </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Основная информация
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="/sert.html" class="footer-body__list-link">
-                        Сертификаты
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Партнеры
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Руководство
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Заказчики
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="/complex.html" class="footer-body__list-link">
-                        Логистический комплекс
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="/reviews.html" class="footer-body__list-link">
-                        Отзывы
-                    </a>
-                </li>
+                {{COMPANYNAV}}
             </ul>
             <ul class="footer-body__list footer-body__list-offers">
                 <li class="footer-body__list-item footer-body__list-caption">
