--- a/src/site/templates/static/static.htm
+++ b/src/site/templates/static/static.htm
@@ -1,6 +1,21 @@
-{{BREADCRUMBS}}
-  <div class="holder">
-    <h1>{{TITLE}}</h1>
-
-    {{CONTENT}}
-  </div>
+<section id="lottie" class="page__main main">
+        <div class="main__container">
+          <div class="main__body main__body-md">
+            {{BREADCRUMBS}}
+            <h1 class="main__title title-xl">
+              {{TITLE}}
+            </h1>
+          </div>
+        </div>
+        <canvas id="gradient-canvas" data-transition-in>
+      </section>
+      <div class="page__article article">
+        <div class="article__container">
+          <div class="article__body">
+            <article class="article__content">
+              {{CONTENT}}
+            </article>
+          </div>
+        </div>
+      </div>
+      
