--- a/src/site/templates/video/bl-video.htm
+++ b/src/site/templates/video/bl-video.htm
@@ -1,5 +1,13 @@
-<div id="bl-video">
-            <a href="#modal-video" class="js-modal-link" rel="nofollow" data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}">
-                <span class="title">Посмотрите <br>видео о&nbsp;нас</span>
-            </a>
-        </div>
+<div class="about__video video__body">
+                            <div class="video__main">
+                                <h2 class="video__title title-xl">
+                                    Видео о нас
+                                </h2>
+                                <div class="video__desc">
+                                    Посмотрите, как устроены наши логистические комплексы и&nbsp;производства
+                                </div>
+                            </div>
+                            <a href="" class="video__link icon-play" data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}">
+                                <picture><source srcset="/img/benefits/01.webp" type="image/webp"><img src="/img/benefits/01.jpg" class="cover-image" alt="video preview"></picture>
+                            </a>
+                        </div>
