--- a/src/site/templates/company/bl-advantages.htm
+++ b/src/site/templates/company/bl-advantages.htm
@@ -1,3 +1,3 @@
-<ul>
-                        {{LIST}}
-                    </ul>
+<div class="about__numbers">
+                            {{LIST}}
+                        </div>
