--- a/src/site/templates/components/articles/bl-news.htm
+++ b/src/site/templates/components/articles/bl-news.htm
@@ -1,12 +1,20 @@
-<div id="bl-news">
-            <div class="holder">
-                <h2><a href="/articles/">{{TITLE}}</a></h2>
-                <div class="tools-r">
-                    <a href="/articles/" class="more">Читать все</a>
+<section class="page__news news">
+                <div class="news__container">
+                    <div class="news__header" data-animation>
+                        <h2 class="news__title title-xxl">
+                            {{TITLE}}
+                        </h2>
+                        <a href="/articles/" class="news__more more-link">
+                            Смотреть все
+                        </a>
+                    </div>
+                    <div class="news__items">
+                        {{LIST}}
+                    </div>
+                    <div class="news__btn">
+                        <a href="/articles/" class="btn btn-blue">
+                            Смотреть все
+                        </a>
+                    </div>
                 </div>
-
-                <ul>
-                    {{LIST}}
-                </ul>
-            </div>
-        </div>
+            </section>
