--- a/src/site/templates/components/partner/bl-partners.htm
+++ b/src/site/templates/components/partner/bl-partners.htm
@@ -1,12 +1,24 @@
-<div id="bl-partners">
-            <div class="holder">
-                <h2><a href="/company/partners/">{{TITLE}}</a></h2>
-                <div class="tools-r">
-                    <a href="/company/partners/" class="more">смотреть всех</a>
-                </div>
-
-                <ul class="js-slider" data-arrows="false" data-adaptive="true" data-center="false">
-                    {{LIST}}
-                </ul>
-            </div> 
-        </div>
+<div class="companies__column companies-partners">
+                            <div class="companies__column-header">
+                                <h3 class="companies__title title-lg">
+                                    {{TITLE}}
+                                </h3>
+                                <a href="/company/partners/" class="companies__more more-link">Смотреть все</a>
+                            </div>
+                            <div class="companies__column-body">
+                                <div class="companies__item">
+                                    <picture><source srcset="/img/companies/partners/01.webp" type="image/webp"><img src="/img/companies/partners/01.png" alt="Ensto"></picture>
+                                </div>
+                                <div class="companies__item">
+                                    <picture><source srcset="/img/companies/partners/02.webp" type="image/webp"><img src="/img/companies/partners/02.png" alt="СВЕЛ"></picture>
+                                </div>
+                                <div class="companies__item">
+                                    <img src="/img/companies/partners/03.svg" alt="НИЛЕД">
+                                </div>
+                            </div>
+                            <div class="companies__column-btn">
+                                <a href="/company/partners/" class="btn btn-orange">
+                                    Смотреть все
+                                </a>
+                            </div>
+                        </div>
