--- a/src/site/templates/components/partner/bl-partners__item.htm
+++ b/src/site/templates/components/partner/bl-partners__item.htm
@@ -1,1 +1,5 @@
-<li><a href="{{LINK}}" target="_blank" rel="nofollow"><img src="{{IMAGE}}" alt="{{ALT}}" title="{{ALT}}" {{STYLE}}></a></li>
+<div class="companies__item">
+									<a href="{{LINK}}" target="_blank" rel="nofollow">
+                                    	<picture><source srcset="{{IMAGEWEBP}}" type="image/webp"><img src="{{IMAGE}}" alt="{{ALT}}"></picture>
+                                   	</a>
+                                </div>
