--- a/src/site/templates/home.htm
+++ b/src/site/templates/home.htm
@@ -98,213 +98,14 @@
                 {{VIDEO}}
             </div>
             {{PROJECTS}}
-            <section class="page__news news">
-                <div class="news__container">
-                    <div class="news__header" data-animation>
-                        <h2 class="news__title title-xxl">
-                            Новости
-                        </h2>
-                        <a href="/news.html" class="news__more more-link">
-                            Смотреть все
-                        </a>
-                    </div>
-                    <div class="news__items">
-                        <div class="news__item" data-animation>
-                            <div class="news__item-body">
-                                <h3 class="news__item-title title-md">
-                                    <a href="/article.html" class="news__item-link">
-                                        Постановка материалов для реконструкции
-                                    </a>
-                                </h3>
-                                <time datetime="2022-09-30" class="news__item-time">
-                                    30 сентября
-                                </time>
-                                <p class="news__item-text">
-                                    2022 год стал важным этапом в истории развития компании ПСК – из
-                                    компании-поставщика, имеющего положительную репутацию в энергетической отрасли, она
-                                    превратилась в производителя, который готов ставит.
-                                </p>
-                                <a href="/article.html" class="news__item-link more-link">
-                                    Подробнее
-                                </a>
-                            </div>
-                            <a href="/article.html" class="news__item-image">
-                                <picture><source srcset="img/news/01.webp"type="image/webp"><img src="img/news/01.jpg" class="cover-image" alt="news picture"></picture>
-                            </a>
-                        </div>
-                        <div class="news__item" data-animation>
-                            <div class="news__item-body">
-                                <h3 class="news__item-title title-md">
-                                    <a href="/article.html" class="news__item-link">
-                                        Награждение по итогам года
-                                    </a>
-                                </h3>
-                                <time datetime="2022-01-25" class="news__item-time">
-                                    25 января
-                                </time>
-                                <p class="news__item-text">
-                                    По итогам работы 2021 года ООО “ПСК СтройИнвест” наградила 18 сотрудников компании
-                                    Благодарственными письмами, вскоре мы создадим заводы лучше прежних.
-                                </p>
-                                <a href="/article.html" class="news__item-link more-link">
-                                    Подробнее
-                                </a>
-                            </div>
-                            <a href="/article.html" class="news__item-image">
-                                <picture><source srcset="img/news/02.webp"type="image/webp"><img src="img/news/02.jpg" class="cover-image" alt="news picture"></picture>
-                            </a>
-                        </div>
-                        <div class="news__item" data-animation>
-                            <div class="news__item-body">
-                                <h3 class="news__item-title title-md">
-                                    <a href="/article.html" class="news__item-link">
-                                        Поставка материалов для реконструкции <br>
-                                        ПС 110 кВ Учалы
-                                    </a>
-                                </h3>
-                                <time datetime="2021-11-19" class="news__item-time">
-                                    19 ноября 2021 г.
-                                </time>
-                                <p class="news__item-text">
-                                    ПСК СтройИнвест поставляет материалы для реконструкции ПС 110 кВ Учалы, для
-                                    электроснабжения объекта АО Учалинский ГОК в Республике Башкортостан.
-                                </p>
-                                <a href="/article.html" class="news__item-link more-link">
-                                    Подробнее
-                                </a>
-                            </div>
-                            <a href="/article.html" class="news__item-image">
-                                <picture><source srcset="img/news/03.webp"type="image/webp"><img src="img/news/03.jpg" class="cover-image" alt="news picture"></picture>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="news__btn">
-                        <a href="/news.html" class="btn btn-blue">
-                            Смотреть все
-                        </a>
-                    </div>
-                </div>
-            </section>
-            <section class="page__team team">
-                <div class="team__container">
-                    <div class="team__header" data-animation>
-                        <h2 class="team__title title-xxl">
-                            Главные лица
-                        </h2>
-                        <a href="/team.html" class="team__more more-link">
-                            Смотреть все
-                        </a>
-                    </div>
-                    <div class="team__body" data-animation>
-                        <div class="team__item">
-                            <div class="team__item-image">
-                                <picture><source srcset="img/team/01.webp"type="image/webp"><img src="img/team/01.png" alt="team image"></picture>
-                            </div>
-                            <div class="team__item-desc">
-                                <div class="team__item-name">
-                                    Ярулин Ленар <br>
-                                    Раисович
-                                </div>
-                                <div class="team__item-position">
-                                    Директор
-                                </div>
-                                <a href="tel:+78432333923" class="team__item-phone icon-phone">
-                                    +7 (843) 233-39-23
-                                </a>
-                            </div>
-                        </div>
-                        <div class="team__item">
-                            <div class="team__item-image">
-                                <picture><source srcset="img/team/02.webp"type="image/webp"><img src="img/team/02.png" alt="team image"></picture>
-                            </div>
-                            <div class="team__item-desc">
-                                <div class="team__item-name">
-                                    Гатауллин Радик <br>
-                                    Ахнафович
-                                </div>
-                                <div class="team__item-position">
-                                    Исполнительный директор
-                                </div>
-                                <a href="tel:+78432333923" class="team__item-phone icon-phone">
-                                    +7 (843) 233-39-23
-                                </a>
-                            </div>
-                        </div>
-                        <div class="team__item">
-                            <div class="team__item-image">
-                                <picture><source srcset="img/team/03.webp"type="image/webp"><img src="img/team/03.png" alt="team image"></picture>
-                            </div>
-                            <div class="team__item-desc">
-                                <div class="team__item-name">
-                                    Николаев Станислав <br> Константинович
-                                </div>
-                                <div class="team__item-position">
-                                    Коммерческий директор
-                                </div>
-                                <a href="tel:+78432333923" class="team__item-phone icon-phone">
-                                    +7 (843) 233-39-23
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="team__btn">
-                        <a href="/team.html" class="btn btn-blue">
-                            Смотреть все
-                        </a>
-                    </div>
-                </div>
-            </section>
+            {{ARTICLES}}
+            {{STAFF}}
+            
             <div class="page__companies companies" data-animation>
                 <div class="companies__container">
                     <div class="companies__columns">
-                        <div class="companies__column companies-customers">
-                            <div class="companies__column-header">
-                                <h3 class="companies__title title-lg">
-                                    Заказчики
-                                </h3>
-                                <a href="/customers.html" class="companies__more more-link">Смотреть все</a>
-                            </div>
-                            <div class="companies__column-body">
-                                <div class="companies__item">
-                                    <picture><source srcset="img/companies/customers/01.webp"type="image/webp"><img src="img/companies/customers/01.png" alt="customers picture"></picture>
-                                </div>
-                                <div class="companies__item">
-                                    <picture><source srcset="img/companies/customers/02.webp"type="image/webp"><img src="img/companies/customers/02.png" alt="customers picture"></picture>
-                                </div>
-                                <div class="companies__item">
-                                    <picture><source srcset="img/companies/customers/03.webp"type="image/webp"><img src="img/companies/customers/03.png" alt="customers picture"></picture>
-                                </div>
-                            </div>
-                            <div class="companies__column-btn">
-                                <a href="/customers.html" class="btn btn-blue">
-                                    Смотреть все
-                                </a>
-                            </div>
-                        </div>
-                        <div class="companies__column companies-partners">
-                            <div class="companies__column-header">
-                                <h3 class="companies__title title-lg">
-                                    Партнеры
-                                </h3>
-                                <a href="/partners.html" class="companies__more more-link">Смотреть все</a>
-                            </div>
-                            <div class="companies__column-body">
-                                <div class="companies__item">
-                                    <picture><source srcset="img/companies/partners/01.webp"type="image/webp"><img src="img/companies/partners/01.png" alt="partners picture"></picture>
-                                </div>
-                                <div class="companies__item">
-                                    <picture><source srcset="img/companies/partners/02.webp"type="image/webp"><img src="img/companies/partners/02.png" alt="partners picture"></picture>
-                                </div>
-                                <div class="companies__item">
-                                    <img src="img/companies/partners/03.svg" alt="partners picture">
-                                </div>
-                            </div>
-                            <div class="companies__column-btn">
-                                <a href="/partners.html" class="btn btn-orange">
-                                    Смотреть все
-                                </a>
-                            </div>
-                        </div>
+                        {{CLIENTS}}
+                        {{PARTNERS}}
                     </div>
                 </div>
             </div>
